--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -36,7 +36,7 @@ input[type="checkbox"]{width:auto;margin-top:19px}
 .padding-top-xs{padding-top:20px}
 .margin-top-xs{margin-top:10px}
 .margin-right-xs{margin-right:10px}
-.margin-bottom{margin-bottom:40px}
+.margin-bottom-xs{margin-bottom:10px}
 .padding-bottom{padding-bottom:50px}
 .padding-bottom-sm{padding-bottom:30px}
 .padding-left-xs{padding-left:10px}
@@ -380,7 +380,8 @@ thead{background:rgba(0,0,0,0.15)}
 .table-striped>tbody>tr:nth-of-type(even){background-color:rgba(0,0,0,0.05)}
 .table-striped>tbody>tr:nth-of-type(odd){background-color:rgba(255,255,255,1)}
 .table-condensed>tbody>tr>td,.table-condensed>tbody>tr>th,.table-condensed>tfoot>tr>td,.table-condensed>tfoot>tr>th,.table-condensed>thead>tr>td,.table-condensed>thead>tr>th{padding:5px 15px}
-.well{min-height:230px;border-radius:6px;background-image:url(../img/patterns/brushed.png);text-shadow:#efefef .5px .5px 0;font-weight:300;color:#777;box-shadow:0 2px 4px rgba(0,0,0,0.2);-webkit-box-shadow:1px 0 3px rgba(0,0,0,.2);-moz-box-shadow:0 2px 4px rgba(0,0,0,.2);z-index:1;border:1px solid rgba(255,255,255,0.5);padding:10px 40px 30px}
+.well{transition:color box-shadow 1s;-webkit-transition:color box-shadow 1s;-moz-transition:color box-shadow 1s;-ms-transition:color box-shadow 1s;-o-transition:color box-shadow 1s;text-align:center;background-color: #fff;color:#777;z-index:1;padding: 40px 40px 40px 40px;text-shadow: #efefef .5px .5px 0;border-radius: 7px;-moz-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);-webkit-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);border:1px solid rgba(223,223,223,0.5)}
+.well:hover {box-shadow: inset 0 0px 3px 1px rgba(200,0,0,0.8);color:#BA0000}
 .well .btn-dash{position:absolute;bottom:40px;right:40px}
 .CodeMirror{width:100%!important;height:100%!important;font-size:12px;padding-top:35px}
 #code-btns{background-color:#F7F7F7;padding-left:30px;border-bottom:1px solid #DDD;position:fixed;width:100%;z-index:5}
