--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -13,7 +13,7 @@
                     
                     <div class="row">
                         <div id="projects" class="col-sm-4">
-                            <a href="{{url_for('account.applications')}}" rel="nofollow">
+                            <a href="{{ url_for('account.applications', name=current_user.name) }}" rel="nofollow">
                             <div class="well">
                                 <h3><i class="fa fa-folder-open fa-3x"></i> {{_('Projects')}}</h3>
                             </div>
