--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -15,7 +15,8 @@
                         <div id="projects" class="col-sm-4">
                             <a href="{{ url_for('account.applications', name=current_user.name) }}" rel="nofollow">
                             <div class="well">
-                                <h3><i class="fa fa-folder-open fa-3x"></i> {{_('Projects')}}</h3>
+                                <i class="fa fa-folder-open fa-4x"></i>
+                                <h3  class="margin-bottom-xs">{{_('Projects')}}</h3>
                             </div>
                             </a>
                         </div>
@@ -23,7 +24,8 @@
                         <div id="featured-apps" class="col-sm-4">
                             <a href="{{url_for('admin.featured')}}" rel="nofollow">
                             <div class="well">
-                                <h3><i class="fa fa-star fa-3x"></i> {{_('Featured')}}</h3>
+                                <i class="fa fa-star fa-4x"></i>
+                                <h3  class="margin-bottom-xs"> {{_('Featured')}}</h3>
                             </div>
                             </a>
                         </div>         
@@ -31,7 +33,8 @@
                         <div id="categories" class="col-sm-4">
                             <a href="{{url_for('admin.categories')}}" rel="nofollow">
                             <div class="well">
-                                <h3><i class="fa fa-check fa-3x"></i> {{_('Categories')}}</h3>
+                                <i class="fa fa-check fa-4x"></i>
+                                <h3  class="margin-bottom-xs"> {{_('Categories')}}</h3>
                             </div>
                             </a>
                         </div>
@@ -43,7 +46,8 @@
                         <div id="users" class="col-sm-4">
                             <a href="{{url_for('admin.users')}}" rel="nofollow">
                             <div class="well">
-                                <h3><i class="fa fa-user fa-3x"></i> {{_('Administrators')}}</h3>
+                                <i class="fa fa-user fa-4x"></i>
+                                <h3  class="margin-bottom-xs"> {{_('Administrators')}}</h3>
                             </div>
                             </a>
                         </div>
@@ -51,7 +55,8 @@
                         <div id="users-list" class="col-sm-4">
                             <a href="{{url_for('admin.export_users', format='csv')}}" rel="nofollow">
                                 <div class="well">
-                                    <h3><i class="fa fa-list fa-3x"></i> {{_('Export Users')}}</h3>
+                                    <i class="fa fa-list fa-4x"></i> 
+                                    <h3  class="margin-bottom-xs">{{_('Export Users')}}</h3>
                                 </div>
                             </a>
                         </div>
@@ -59,7 +64,8 @@
                         <div id="dashboard" class="col-sm-4">
                             <a href="{{url_for('rq_dashboard.overview')}}" rel="nofollow">
                             <div class="well">
-                                <h3><i class="fa fa-dashboard fa-3x"></i> {{_('Background Jobs')}}</h3>
+                                <i class="fa fa-dashboard fa-4x"></i>
+                                <h3  class="margin-bottom-xs"> {{_('Background Jobs')}}</h3>
                             </div>
                             </a>
                         </div>
