--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -189,6 +189,7 @@ body > footer .container{padding-left:20px;padding-right:20px}
 .big-modal{width:1000px;margin-left:-500px}
 }
 @media (max-width: 991px) {
+.well h3, .well .h3{font-size: 1em}
 .bs-docs-sidenav{top:0;width:180px;margin-top:0;margin-right:0}
 .big-modal{width:800px;margin-left:-400px;margin-top:-60%}
 .navbar-nav>li{padding:0 10px}
