--- a/templates/account/applications.html
+++ b/templates/account/applications.html
@@ -14,7 +14,7 @@
                     {% if current_user.admin == 1 %}
                         <div class="row vcenter">
                             <div class="col-md-8 col-xs-12 vcenter">
-                                <h1><strong>{{ current_user.fullname }}'s</strong>: {{ _('Projects') }}</h1>
+                                <h1><strong>Admin</strong>: {{ _('Projects') }}</h1>
                             </div>
     
                             <div class="col-md-4 col-xs-12 text-center">            
