--- a/templates/applications/export.html
+++ b/templates/applications/export.html
@@ -5,55 +5,52 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
+    <span class="set-main-bg" data-bg="pattern-white-wall"></span>
         {{ render_local_nav(current_user, 'export', app.short_name) }}
             <div class="container-padded">
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
+                        {{ helper.render_app_title(app, upload_method, subtitle=_('Export Tasks'))}}
                         {{ helper.render_loading("Exporting data, this may take a while, please wait...") }}
-                        {{ helper.render_app_title(app, upload_method, subtitle=_('Export All Tasks and Task Runs'))}}
-                        <p>{{ _('You can export and download') }} <strong>{{ _('all the available') }}</strong> {{ _('Tasks and Task Runs (the submitted answers by the users) in CSV or JSON formats.') }}</p>
+                        <h3 class="text-inset-grey">Export Raw Data</h3>
                         <div class="row">
-                            <div id="csv" class="col-sm-6 well">
-                                <h2>{{_('Export in CSV format')}}</h2>
-                                <a href={{url_for('app.export_to', short_name=app.short_name, type='task', format='csv')}} rel="nofollow" class="btn btn-lg" download>{{ _('Tasks') }}</a>
-                                <a href={{url_for('app.export_to', short_name=app.short_name, type='task_run', format='csv')}} rel="nofollow" class="btn btn-lg" download>{{ _('Task Runs') }}</a>
+                            
+                            <div id="csv-task" class="col-sm-3">
+                                <a href="{{url_for('app.export_to', short_name=app.short_name, type='task', format='csv')}}" rel="nofollow">
+                                    <div class="well">
+                                        <i class="fa fa-file-excel-o fa-4x"></i> 
+                                        <h3  class="margin-bottom-xs">{{_('Tasks (CSV)')}}</h3>
+                                    </div>
+                                </a>
                             </div>
-                            <div id="json" class="col-sm-6 well">
-                                <h2>{{_('Export in JSON format')}}</h2>
-                                <a href={{url_for('app.export_to', short_name=app.short_name, type='task', format='json')}} rel="nofollow" class="btn btn-lg" download>{{ _('Tasks') }}</a>
-                                <a href={{url_for('app.export_to', short_name=app.short_name, type='task_run', format='json')}} rel="nofollow" class="btn btn-lg" download>{{ _('Task Runs') }}</a>
-                
+                            <div id="json-task" class="col-sm-3">
+                                <a href="{{url_for('app.export_to', short_name=app.short_name, type='task', format='json')}}" rel="nofollow">
+                                    <div class="well">
+                                        <i class="fa fa-file-code-o fa-4x"></i> 
+                                        <h3  class="margin-bottom-xs">{{_('Tasks (JSON)')}}</h3>
+                                    </div>
+                                </a>
+                            </div>
+                            <div id="users-list" class="col-sm-3">
+                                <a href="{{url_for('app.export_to', short_name=app.short_name, type='task_run', format='csv')}}" rel="nofollow">
+                                    <div class="well">
+                                        <i class="fa fa-file-excel-o fa-4x"></i> 
+                                        <h3  class="margin-bottom-xs">{{_('Answers (CSV)')}}</h3>
+                                    </div>
+                                </a>
+                            </div>
+                            <div id="users-list" class="col-sm-3">
+                                <a href="{{url_for('app.export_to', short_name=app.short_name, type='task_run', format='json')}}" rel="nofollow">
+                                    <div class="well">
+                                        <i class="fa fa-file-code-o fa-4x"></i> 
+                                        <h3  class="margin-bottom-xs">{{_('Answers (JSON)')}}</h3>
+                                    </div>
+                                </a>
                             </div>
                         </div>
+                        <h3 class="text-inset-grey">Formatted Data</h3>
                         <div class="row">
-                            {% if current_user.is_authenticated() and app.owner_id == current_user.id %}
-                                <form method="post" class="form-horizontal" action="{{ url_for('account.update_profile', name=current_user.name) }}">
-                                <hr>
-                                <h2>External Services</h2>
-                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                                {{ render_field(external_form.ckan_api) }}
-                                <div class="form-actions">
-                                    <button type="submit" name='btn' value="External" class="btn btn-primary btn-large" />{{ _('Save the changes') }}</button>
-                                  <a href="{{ url_for('account.update_profile', name=current_user.name) }}" class="btn">{{ _('Cancel') }}</a>
-                                </div>
-                                </fieldset>
-                            </form>
-                            <div id="ckan" class="col-sm-6 well">
-                                {% if ckan_name %}
-                                <h2>Export to the {{ckan_name}}</h2>
-                                {% else %}
-                                <h2>Export to a CKAN server</h2>
-                                {% endif %}
-                                <p><span class="label label-danger"><i class="glyphicon glyphicon-bullhorn"></i> IMPORTANT</span> This export option stills in beta mode and may fail in the CKAN server. If you get an error, please send an e-mail to info@pybossa.com</p>
-                                {% if current_user.ckan_api %}
-                                <a id="ckan_task" href="{{url_for('app.export_to', short_name=app.short_name, type='task', format='ckan')}}" rel="nofollow" class="btn btn-lg">{{_('Tasks')}}</a>
-                                <a id="ckan_task_run" href="{{url_for('app.export_to', short_name=app.short_name, type='task_run', format='ckan')}}" rel="nofollow" class="btn btn-lg">{{_('Task Runs')}}</a>
-                                {% else %}
-                                <p id="ckan_warning">You don't have a Datahub.io API key in your {{BRAND}} account. Please,  <a href="http://datahub.io/user/register">create an account</a> and copy/paste the API key in your profile in order to use this exporter.</p>
-                                {% endif %}
-                            </div>
-                            {% endif %}
                         </div>
                     </div>
                 </div>
