--- a/templates/applications/task_import_options.html
+++ b/templates/applications/task_import_options.html
@@ -15,32 +15,18 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p class="lead">{{_('Use one of the following available')}}
-                        <strong>{{_('importers')}}</strong> {{_('to import tasks...')}}</p>
+                        <strong>{{_('importers')}}</strong> {{_('to import tasks')}}</p>
                     </div>
                 </div>
-                    {% for row in available_importers|batch(2) %}
+                    {% for row in available_importers|batch(3) %}
                     <div class="row">
                         {% for importer in row %}
-                        <div class="col-md-6">
+                        <div class="col-sm-4">
                             {% include importer %}
                         </div>
                         {% endfor %}
                     </div>
                     {% endfor %}
-                <div class="row">
-                    <div class="col-md-12">
-                        <p class="lead">{{_('... or import a set of') }} <strong>{{_('template tasks')}}</strong> {{ ('for any of the template projects.')}}</p>
-                    </div>
-                </div>
-                {% for row in task_tmpls|batch(2) %}
-                <div class="row">
-                    {% for task_tmpl in row %}
-                    <div class="col-md-6">
-                      {% include task_tmpl %}
-                    </div>
-                    {% endfor %}
-                </div>
-                {% endfor %}
             </div>
         </div>
     </div>
