--- a/templates/applications/tasks/csv.html
+++ b/templates/applications/tasks/csv.html
@@ -1,7 +1,5 @@
-<div class="well">
-  <h2><i class="glyphicon glyphicon-link"></i> CSV</h2> 
-  <h3>{{_('Provide a public link to your own CSV file')}}</h3>
-  <p><a href="{{url_for(target, short_name=app.short_name,
-      type='csv')}}" class="btn btn-inverse">{{_('Use the CSV URL
-      importer')}}</a></p>
-</div>
+<a href="{{url_for(target, short_name=app.short_name, type='csv')}}" rel="nofollow">
+    <div class="well">
+        <h3><i class="fa fa-file-excel-o fa-4x"></i>{{_('CSV')}}</h3> 
+    </div>
+</a>
