--- a/templates/applications/tasks/epicollect.html
+++ b/templates/applications/tasks/epicollect.html
@@ -1,7 +1,5 @@
-<div class="well">
-    <h2><i class="fa fa-external-link"></i> {{_('EpiCollect Plus Project')}}</h2> 
-    <h3>{{_('Use an EpiCollect Plus project')}}</h3>
-  <p><a href="{{url_for(target, short_name=app.short_name,
-      type='epicollect')}}" class="btn btn-inverse">{{_('Use the EpiCollect
-      Plus importer')}}</a></p>
-</div>
+<a href="{{url_for(target, short_name=app.short_name, type='epicollect')}}" rel="nofollow">
+    <div class="well">
+        <h3><i class="fa fa-google fa-4x"></i>{{_('EpiCollect Plus')}}</h3> 
+    </div>
+</a>
