--- a/templates/applications/tasks/flickr.html
+++ b/templates/applications/tasks/flickr.html
@@ -1,6 +1,5 @@
-<div class="well">
-  <h2><i class="glyphicon glyphicon-picture"></i> Flickr</h2> 
-  <h3>{{_('Use images from a Flickr set')}}</h3>
-  <p><a href="{{url_for(target, short_name=app.short_name,
-      type='flickr')}}" class="btn btn-inverse">{{_('Use the Flickr importer')}}</a></p>
-</div>
+<a href="{{url_for(target, short_name=app.short_name, type='flickr')}}" rel="nofollow">
+    <div class="well">
+        <h3><i class="fa fa-flickr fa-4x"></i>{{_('Flickr')}}</h3> 
+    </div>
+</a>
