--- a/templates/applications/importers/epicollect.html
+++ b/templates/applications/importers/epicollect.html
@@ -19,7 +19,7 @@
                             {{ form.hidden_tag() }}
                             <span class="help-block">{{_('Please provide an EpiCollect Plus project name to import data for )}}</span>
                               {{ render_field(form.epicollect_project, class_="input-block-level form-control",
-                              placeholder=_('The name of the public EpiCollect Plus project')) }}
+                              placeholder=_(('The name of the public EpiCollect Plus project')) }}
                               {{ render_field(form.epicollect_form, class_="input-block-level", placeholder=_('The name of the project\'s form')) }}
                               <div class="pull-right" role="group">
                                 <a href="{{ url_for('app.settings', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
