--- a/templates/applications/importers/flickr.html
+++ b/templates/applications/importers/flickr.html
@@ -12,10 +12,17 @@
                         <div class="col-sm-9 col-sm-offset-3">
                             {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
                             <h1><strong>{{app.name}}</strong>: {{_('Import tasks')}}</h1>
-                            <h3>{{_('From Flickr')}}
-                                {% if albums %}
+                            <div class="row vcenter">  
+                                        <div class="col-xs-10">
+                                        <h3>{{_('From Flickr')}}
+                                        </div>
+                                      <div class="col-xs-2">
+                                            {% if albums %}
                                     <a href="{{ url_for('flickr.logout', next=url_for(target, short_name=app.short_name, type='flickr')) }}" class="btn btn-warning pull-right">{{ _('Revoke access') }}</a>
                                 {% endif %}
+                                      </div>
+                                    </div>
+                                
                             </h3>
                             <hr>
                             {% if not albums %}
@@ -27,7 +34,7 @@
                             <div class="row">
                                 <ul>
                                 {% for album in albums %}
-                                    <li class="col-md-4">
+                                    <li class="col-md-3 col-sm-4 col-xs-12 text-center-xs">
                                         <h4><strong>{{ album['title'] }}</strong></h4>
                                         <img src="{{ album['thumbnail_url'] }}" class="grey-border">
                                         <p class="small">{{ album['photos'] }} {{ _('photos') }}</p>
@@ -40,7 +47,7 @@
                             {% endif %}
                             <br>
                             {% if form %}
-                            <form role="form" method="post" action="{{ url_for(target, short_name=app.short_name) }}" class="padding-top-sm">
+                            <form role="form" method="post" action="{{ url_for(target, short_name=app.short_name) }}">
                                 <fieldset>
                                      {{ form.hidden_tag() }}
                                      <span class="help-block"> {{ _('Alteratively, you can manually provide the ID of a Flickr album') }}</span>
