--- a/templates/applications/importers/gdocs.html
+++ b/templates/applications/importers/gdocs.html
@@ -13,15 +13,24 @@
                             {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
                             <h1><strong>{{app.name}}</strong>: {{_('Import tasks')}}</h1>
                             {% if form %}
-                            <h2>{{_('From a Google Docs Spreadsheet')}}</h2>
+                                <hr>
+                                    <div class="row vcenter">  
+                                        <div class="col-xs-10">
+                                        <h3>{{_('From a Google Docs Spreadsheet')}}</h3>
+                                        </div>
+                                      <div class="col-xs-2">
+                                            <a href="https://docs.google.com/spreadsheet/ccc?key=0AsNlt0WgPAHwdHFEN29mZUF0czJWMUhIejF6dWZXdkE&usp=sharing"><i class="fa fa-book"></i> Sample Data</a>
+                                      </div>
+                                    </div>
                           <form role="form" method="post" action="{{ url_for(target, short_name=app.short_name) }}">
                             <fieldset>
                             {{ form.hidden_tag() }}
+                            
                             <span class="help-block"> {{ _('Please provide a URL to a Google Drive Spreadsheet with data for') }} {{ active_app }}. <br/> {{ _('For more information, please look at') }} <a href="http://docs.pybossa.com/en/latest/user/overview.html#importing-the-tasks-via-the-built-in-csv-task-creator" target="_blank">{{ _('the documentation') }}.</a></span>
                               {{ render_field(form.googledocs_url, class_="input-block-level form-control", placeholder="The URL of the Google Docs Spreadsheet") }}
                               <div class="pull-right" role="group">
-                                  <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
-                                  <a href="{{ url_for('app.settings', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
+                                <a href="{{ url_for('app.settings', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
+                                <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
                               </div>
                             </fieldset>
                           </form>
@@ -31,8 +40,6 @@
                 </div>
             </div>
 <script>
-    $("#submit").off('click').on('click', function(){
-        $("#loading").show();
-    });
+    $("#submit").off('click').on('click', function(){$("#loading").show();});
 </script>
 {% endblock %}
