--- a/templates/applications/tasks/epicollect.html
+++ b/templates/applications/tasks/epicollect.html
@@ -1,5 +1,6 @@
 <a href="{{url_for(target, short_name=app.short_name, type='epicollect')}}" rel="nofollow">
     <div class="well">
-        <h3><i class="fa fa-google fa-4x"></i>{{_('EpiCollect Plus')}}</h3> 
+        <i class="fa fa-plus-square-o fa-4x"></i>
+        <h3 class="margin-bottom-xs>{{_('EpiCollect Plus')}}</h3> 
     </div>
 </a>
