Missing quote marks added

--- a/templates/applications/tasks/gdocs.html
+++ b/templates/applications/tasks/gdocs.html
@@ -1,5 +1,5 @@
 <a href="{{url_for(target, short_name=app.short_name, type='gdocs')}}" rel="nofollow">
     <div class="well">
-        <h3 class="margin-bottom-xs><i class="fa fa-google fa-4x"></i>{{_('Google Docs Spreadsheet')}}</h3> 
+        <h3 class="margin-bottom-xs"><i class="fa fa-google fa-4x"></i>{{_('Google Docs Spreadsheet')}}</h3> 
     </div>
 </a>
