--- a/templates/applications/tasks/dropbox.html
+++ b/templates/applications/tasks/dropbox.html
@@ -1,6 +1,6 @@
 <a href="{{url_for(target, short_name=app.short_name, type='dropbox')}}" rel="nofollow">
     <div class="well">
       <i class="fa fa-dropbox fa-4x"></i>
-        <h3 class="margin-bottom-xs>{{_('Dropbox')}}</h3> 
+        <h3 class="margin-bottom-xs">{{_('Dropbox')}}</h3> 
     </div>
 </a>
