--- a/templates/applications/tasks/flickr.html
+++ b/templates/applications/tasks/flickr.html
@@ -1,6 +1,6 @@
 <a href="{{url_for(target, short_name=app.short_name, type='flickr')}}" rel="nofollow">
     <div class="well">
       <i class="fa fa-flickr fa-4x"></i>
-        <h3 class="margin-bottom-xs>{{_('Flickr')}}</h3> 
+        <h3 class="margin-bottom-xs">{{_('Flickr')}}</h3> 
     </div>
 </a>
