--- a/templates/applications/importers/epicollect.html
+++ b/templates/applications/importers/epicollect.html
@@ -18,7 +18,7 @@
                           <form role="form" method="post" action="{{ url_for(target, short_name=app.short_name) }}">
                             <fieldset>
                             {{ form.hidden_tag() }}
-                              {{ render_field(form.epicollect_project, class_="input-block-level form-control", placeholder=_(('The name of the public EpiCollect Plus project')) }}
+                              {{ render_field(form.epicollect_project, class_="input-block-level form-control", placeholder=_('The name of the public EpiCollect Plus project')) }}
                               {{ render_field(form.epicollect_form, class_="input-block-level", placeholder=_('The name of the project\'s form')) }}
                               <div class="pull-right" role="group">
                                 <a href="{{ url_for('app.settings', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
