Further fixes to import pages

--- a/templates/applications/importers/dropbox.html
+++ b/templates/applications/importers/dropbox.html
@@ -18,27 +18,24 @@
                             <hr>
                               <h3>{{_('From Dropbox')}}</h3>
                                <div id="dropbox-chooser"></div>
-                       
                                <br>
                                {% if form %}
                                <form method="post" action="{{ url_for(target, short_name=app.short_name) }}">
                                    <fieldset>
                                        {{ form.hidden_tag() }}
-                                       <span class="help-inline"> {{ _('For more information, please look at') }} <a href="http://docs.pybossa.com/en/latest/user/overview.html#importing-the-tasks-from-a-flickr-photo-set" target="_blank">{{ _('the documentation') }}.</a></span>
                                        <p id="message" style="display: none;">{{ _('You are about to import') }} <span id="numFiles"></span> {{ _('files') }}.</p>
                                        {{ form.files(style="display: none;") }}
-                                       <div>
-                                           <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-primary" />
-                                           <a href="{{ url_for('app.tasks', short_name=app.short_name) }}" class="btn">{{_('Cancel')}}</a>
+                                       <div class="pull-right" role="group">
+                                        <a href="{{ url_for('app.tasks', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
+                                           <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
                                        </div>
                                    </fieldset>
                                </form>
                                {% endif %}
-                           </div>
+                          </div>
                        </div>
                     </div>
                   </div>
-            </div>
        <script>
            $("#submit").off('click').on('click', function(){
                $("#loading").show();
