--- a/templates/applications/task_import_options.html
+++ b/templates/applications/task_import_options.html
@@ -14,7 +14,7 @@
                 {{ helper.render_app_title(app, subtitle=_('Import Tasks'))}}
                 <div class="row">
                     <div class="col-md-12">
-                        <p class="lead">{{_('Use one of the following to import tasks')}}</p>
+                        <p class="lead">Use one of the following <strong>importers</strong> to import tasks</p>
                     </div>
                 </div>
                     {% for row in available_importers|batch(3) %}
