Task presenter preview fixed

--- a/templates/applications/importers/dropbox.html
+++ b/templates/applications/importers/dropbox.html
@@ -74,6 +74,7 @@
            };
            var button = Dropbox.createChooseButton(options);
            document.getElementById("dropbox-chooser").appendChild(button);
+           document.getElementById("dropbox-chooser").addClass("btn btn-info");
        })();
        </script>
        {% endblock %}
