--- a/templates/applications/task_presenter_editor.html
+++ b/templates/applications/task_presenter_editor.html
@@ -27,31 +27,18 @@
                     <fieldset>
                         <div id="code-btns" role="group" class="btn-group">
                             <a href="{{url_for('app.settings', short_name=app.short_name)}}" class="btn btn-code">{{ _('Cancel') }}</a>
-                            <a href="#" class="btn btn-preview btn-code" value="preview">{{ _('Preview') }}</a>
-                            <input type="submit" value={{ _('Update the project task presenter') }} class="btn btn-code" />
+                            <a href="#" class="btn btn-preview btn-code" value="preview">Preview</a>
+                            <input type="submit" value={{ _('Update') }} class="btn btn-code" />
                         </div>
+                        <div id="code-container">
                         {{ render_field(form.editor)}}
+                        </div>
+                        <div id="preview-container" class="container padding-top" hidden>
+                            <iframe id="preview" frameBorder="0" style="height: 500px"></iframe>
+                        </div>
                     </fieldset>
                 </form>
             </div>
-        </div>
-        
-        <div class="modal fade" id="modal-preview">
-          <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header text-center">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">{{ _('&times;') }}</button>
-                    <h3><strong>{{app.name}}</strong>: {{ _('Task Presenter Preview') }}</h3>
-                </div>
-                
-                <div class="modal-body">
-                        <iframe id="preview" frameBorder="0"></iframe>
-                </div>
-                    <div class="modal-footer">
-                    <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Close') }}</button>
-                </div>
-            </div>
-          </div>
         </div>
     </section>
 </div>
@@ -71,10 +58,28 @@
         preview.open();
         preview.write(editor.getValue());
         preview.close();
+        var $head = $("#preview").contents().find("head");
+        $head.append($("<link/>", { rel: "stylesheet", href: "{{url_for('static', filename='vendor/bootstrap.min.css')}}", type: "text/css" }));
+        $head.append($("<link/>", { rel: "stylesheet", href: "{{url_for('static', filename='css/styles.css')}}", type: "text/css" }));
+        $head.append($("<link/>", { rel: "stylesheet", href: "http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400", type: "text/css" }));
+        $head.append($("<link/>", { rel: "stylesheet", href: "http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", type: "text/css" }));
+        $head.append($("<script/>", { src: "https://code.jquery.com/jquery-2.1.3.min.js" }));
+        $head.append($("<script/>", { src: "{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.js')}}" }));
+        $head.append($("<script/>", { src: "https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" }));
     }
-    $(".btn-preview").off('click').on('click', function(){
-        updatePreview();
-        $("#modal-preview").modal('show');
+    $(".btn-preview").off('click').on('click', function(e){
+        if ($(this).text() == 'Preview'){
+            updatePreview();
+            $(this).text('Back');
+            $("#code-container").slideUp();
+            $("#preview-container").slideDown();
+        } else {
+            $(this).text('Preview');
+            $("#preview-container").slideUp();
+            $("#code-container").slideDown();
+        }
+        $(window).scrollTop();
+        $(this).blur();
     });
 </script>
 {% endblock %}
