--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -212,7 +212,7 @@ body{font-size:16px}
 .sticky-footer-col{height:100px;padding-top:0}
 .img-dialog{width:500px}
 .pull-right-sm{float:right}
-.vcenter-sm{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-flex-align:center;-ms-flex-align:center;-webkit-align-items:center}
+.vcenter-sm{align-items: center; display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-flex-align:center;-ms-flex-align:center;-webkit-align-items:center}
 .pull-right-sm{float:right}
 .splash-overlay{background:rgba(0,0,0,.5)}
 }
