--- a/templates/applications/delete.html
+++ b/templates/applications/delete.html
@@ -20,7 +20,7 @@
                               <h3><strong>{{ _('Are you sure you want to delete this project and all of its tasks?') }}</strong></h3>
                               <div class="pull-right" role="group">
                                 <input type="submit" class="btn btn-default" value="Yes, delete it"/>
-                                <a href="{{ url_for('app.settings', short_name = app.short_name) }}" class="btn btn-danger">{{ _('No, do not delete it!') }}</a>
+                                <a href="{{ url_for('app.tasks', short_name = app.short_name) }}" class="btn btn-danger">{{ _('No, do not delete it!') }}</a>
                               </div>
                         </div>
                     </div>
