--- a/templates/applications/importers/csv.html
+++ b/templates/applications/importers/csv.html
@@ -20,7 +20,7 @@
                                     {{ form.hidden_tag() }}
                                     {{ render_field(form.csv_url, class_="input-block-level form-control", placeholder=_('The URL of the CSV file')) }}
                                     <div class="pull-right" role="group">
-                                        <a href="{{ url_for('app.settings', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
+                                        <a href="{{ url_for('app.tasks', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
                                         <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
                                     </div>
                                 </fieldset>
