--- a/templates/applications/importers/epicollect.html
+++ b/templates/applications/importers/epicollect.html
@@ -22,7 +22,7 @@
                               {{ render_field(form.epicollect_project, class_="input-block-level form-control", placeholder=_('The name of the public EpiCollect Plus project')) }}
                               {{ render_field(form.epicollect_form, class_="input-block-level form-control", placeholder=_('The name of the project\'s form')) }}
                               <div class="pull-right" role="group">
-                                <a href="{{ url_for('app.settings', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
+                                <a href="{{ url_for('app.tasks', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
                                 <input type="submit" value="{{_('Import')}}" class="btn btn-danger" />
                               </div>
                             </fieldset>
