--- a/templates/applications/importers/gdocs.html
+++ b/templates/applications/importers/gdocs.html
@@ -27,7 +27,7 @@
                             {{ form.hidden_tag() }}
                               {{ render_field(form.googledocs_url, class_="input-block-level form-control", placeholder="The URL of the Google Docs Spreadsheet") }}
                               <div class="pull-right" role="group">
-                                <a href="{{ url_for('app.settings', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
+                                <a href="{{ url_for('app.tasks', short_name=app.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
                                 <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
                               </div>
                             </fieldset>
