--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -21,7 +21,7 @@
             {% else %}
             <div class="row padding-bottom-sm">
                 <div class="col-xs-12">
-                    <div class="white-rounded">
+                    <div class="white-rounded chart">
                         <h3 class="text-center"><span class="check-plural" data-num="{{stats.n_total_users}}" data-noun="volunteer"></span> have participated in <span class="check-plural" data-num="{{stats.n_published_apps}}" data-noun="project"></span>, submitted <span class="check-plural" data-num="{{stats.n_task_runs}}" data-noun="answer"></span> and completed <span class="check-plural" data-num="{{stats.n_tasks_completed}}" data-noun="task"></span></h4>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
             
             <div class="row padding-bottom-sm">
                 <div class="col-sm-6 col-xs-12">
-                    <div class="white-rounded chart-inline">
+                    <div class="white-rounded chart">
                         <h4 class="text-center padding-bottom-sm">Top Volunteers This Week</h4>
                         <div id="top-users-chart">
                             <canvas id="top-users" width="500" height="500"></canvas>
@@ -63,7 +63,7 @@
             
             <div class="row padding-bottom-sm">
                 <div class="col-sm-4 col-xs-12">
-                    <div class="white-rounded chart">
+                    <div class="white-rounded chart same-size">
                         <h4 class="text-center padding-bottom-sm">Proportion of Authenticated Users</h4>
                         <div id="user-chart">
                             <canvas id="users" width="500" height="500"></canvas>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-xs-12">
-                    <div class="white-rounded chart">
+                    <div class="white-rounded chart same-size">
                         <h4 class="text-center padding-bottom-sm">Total Daily Activity</h4>
                         <div id="dow-chart">
                             <canvas id="dow" width="500" height="500"></canvas>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-xs-12">
-                    <div class="white-rounded chart">
+                    <div class="white-rounded chart same-size">
                         <h4 class="text-center padding-bottom-sm">Status of Tasks</h4>
                         <div id="task-status-chart">
                             <canvas id="task-status" width="500" height="500"></canvas>
@@ -241,9 +241,9 @@ $(function(){
         var sortedDatesFull = [];
         $.each(compiledDates, function(i, date){
             var dateObj = new Date(date);
-            if($.inArray($.datepicker.formatDate('dd M y', dateObj), sortedDatesFull) === -1) {
+            if($.inArray(date, sortedDatesFull) === -1) {
                 sortedDates.push($.datepicker.formatDate('dd M', dateObj));
-                sortedDatesFull.push($.datepicker.formatDate('dd M y', dateObj));
+                sortedDatesFull.push(date);
             }
         });
         
