--- a/templates/admin/categories.html
+++ b/templates/admin/categories.html
@@ -30,7 +30,7 @@
                 <h2 class="padding-top">{{_('Current Categories')}}</h2>
                 <hr>
                 {% for c in categories %}
-                <div class="row vcenter">
+                <div class="row vcenter hcenter">
                     <div class="col-sm-5">
                         <h3>{{c.name}} <small>({{ n_apps_per_category[c.short_name]}} apps)</small></h3>
                     </div>
