--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="splash">
-  <div class="splash-overlay vcenter">
+  <div class="splash-overlay vcenter hcenter">
     <div class="container text-center padding-top">
       <h1>Crowd-sourcing from the British Library</h1>
         <div class="col-sm-12">
