--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -18,7 +18,7 @@
               <h1>{{ _('Community') }} <h4>{{total}} {{ _('registered users') }}</h4>
               <small>Active volunteers are shown below</small>
             </div>
-            <div class="col-md-4 col-xs-12 text-center">
+            <div class="col-md-4 col-xs-12 padding-top-xs">
               <a class="pull-right-sm btn btn-danger" href="{{url_for('leaderboard.index')}}">{{ _('View Leaderboard') }}</a></h1>
             </div>
           </div>
