--- a/templates/applications/importers/flickr.html
+++ b/templates/applications/importers/flickr.html
@@ -13,7 +13,7 @@
                             {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
                             <h1><strong>{{app.name}}</strong>: {{_('Import tasks')}}</h1>
                             <hr>
-                            <div class="row vcenter">  
+                            <div class="row vcenter hcenter">  
                                         <div class="col-xs-10">
                                         <h3>{{_('From Flickr')}}
                                         </div>
@@ -34,7 +34,7 @@
                             <div class="row">
                                 <ul>
                                 {% for album in albums %}
-                                    <li class="col-md-3 col-sm-4 col-xs-12 text-center-xs">
+                                    <li class="col-md-3 col-sm-4 col-xs-12 text-center-xs same-size flickr-thumbnails">
                                         <h4><strong>{{ album['title'] }}</strong></h4>
                                         <img src="{{ album['thumbnail_url'] }}" class="grey-border">
                                         <p class="small">{{ album['photos'] }} {{ _('photos') }}</p>
